--- a/device-tree-overlay/PRUIO-DTO.dts
+++ b/device-tree-overlay/PRUIO-DTO.dts
@@ -74,8 +74,8 @@
       "P9.21",
       "P9.22",
       "P9.23",
-      "P9.24",
-      "P9.26",
+      /* "P9.24", */
+      /* "P9.26", */
       "P9.27",
       "P9.30",
       "P9.41",
@@ -235,11 +235,11 @@
          P9_23_i: P9_23_in{pinctrl-single,pins = <0x044 0x37>;};
          P9_23_o: P9_23_out{pinctrl-single,pins = <0x044 0x0F>;};
 
-         P9_24_i: P9_24_in{pinctrl-single,pins = <0x184 0x37>;};
-         P9_24_o: P9_24_out{pinctrl-single,pins = <0x184 0x0F>;};
+         /* P9_24_i: P9_24_in{pinctrl-single,pins = <0x184 0x37>;}; */
+         /* P9_24_o: P9_24_out{pinctrl-single,pins = <0x184 0x0F>;}; */
 
-         P9_26_i: P9_26_in{pinctrl-single,pins = <0x180 0x37>;};
-         P9_26_o: P9_26_out{pinctrl-single,pins = <0x180 0x0F>;};
+         /* P9_26_i: P9_26_in{pinctrl-single,pins = <0x180 0x37>;}; */
+         /* P9_26_o: P9_26_out{pinctrl-single,pins = <0x180 0x0F>;}; */
 
          P9_27_i: P9_27_in{pinctrl-single,pins = <0x1A4 0x37>;};
          P9_27_o: P9_27_out{pinctrl-single,pins = <0x1A4 0x0F>;};
@@ -629,21 +629,21 @@
             pinctrl-1 = <&P9_23_o>;
          };
 
-         P9_24_mux {
-            compatible = "bone-pinmux-helper";
-            status = "okay";
-            pinctrl-names = "input", "output";
-            pinctrl-0 = <&P9_24_i>;
-            pinctrl-1 = <&P9_24_o>;
-         };
-
-         P9_26_mux {
-            compatible = "bone-pinmux-helper";
-            status = "okay";
-            pinctrl-names = "input", "output";
-            pinctrl-0 = <&P9_26_i>;
-            pinctrl-1 = <&P9_26_o>;
-         };
+         /* P9_24_mux { */
+         /*    compatible = "bone-pinmux-helper"; */
+         /*    status = "okay"; */
+         /*    pinctrl-names = "input", "output"; */
+         /*    pinctrl-0 = <&P9_24_i>; */
+         /*    pinctrl-1 = <&P9_24_o>; */
+         /* }; */
+         /*  */
+         /* P9_26_mux { */
+         /*    compatible = "bone-pinmux-helper"; */
+         /*    status = "okay"; */
+         /*    pinctrl-names = "input", "output"; */
+         /*    pinctrl-0 = <&P9_26_i>; */
+         /*    pinctrl-1 = <&P9_26_o>; */
+         /* }; */
 
          P9_27_mux {
             compatible = "bone-pinmux-helper";
