--- a/device-tree-overlay/PRUIO-DTO.dts
+++ b/device-tree-overlay/PRUIO-DTO.dts
@@ -25,7 +25,7 @@
    part-number = "PRUIO-DTO";
    version = "00A0";
    exclusive-use =
-      "pruss",
+      // "pruss",
       "pru0",
 
       "P8_07", 
